--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,29 +1,42 @@
-<form class="mt-3">
+<form [formGroup]="productForm" class="mt-3" (ngSubmit)="save(productForm.value)" >
     <div class="form-group">
         <label for="title" class="for">Title</label>
-        <input id="title" type="text" class="form-control">
+        <input id="title" type="text" class="form-control" formControlName='title'>
+
+        <div *ngIf="title.invalid &&  title.touched" class="alert alert-danger">
+         Title is Required!
+        </div>
     </div>
     <div class="form-group">
         <label for="price" class="for">Price</label>
         <div class="input-group-prepend">
             <span class="input-group-text">$</span>
-            <input id="price" type="number" class="form-control">
-          </div>
-       
-    </div>
+            <input id="price" type="number" class="form-control" formControlName='price'>
+        </div>
+        <div *ngIf="price.invalid &&  price.touched" class="alert alert-danger">
+            <div *ngIf="price.errors.required" class="alert alert-danger">Price is Required!</div>
+            <div *ngIf="price.errors.min" class="alert alert-danger">Price should be 0 or higher!</div>
+        </div>
+      </div>
+   
     <div class="form-group">
-        <label for="category" class="for">Category</label>
-        <select id="category" type="" class="form-control">
-            <option value="" disabled>Choose your city</option>
-            <option *ngFor ='let category of categories$ | async' [value]="category.key">
-                {{ category.payload.val().name }}
+        <label for="category" >Category</label>
+        <select id="category" class="form-control" formControlName='category'>
+            <option value="choose category" class='disabled' ></option>
+            <option *ngFor='let category of categories$ | async' [value]="category.key">
+                {{ category.name }}
             </option>
-            
-        </select>   
+        </select>
+        <div *ngIf="category.invalid &&  category.touched" class="alert alert-danger">
+            Category is Required!
+        </div>
     </div>
     <div class="form-group">
         <label for="imageUrl" class="for">ImageUrl</label>
-        <input id="imageUrl" type="number" class="form-control">
+        <input id="imageUrl" type="text" class="form-control" formControlName='imageUrl'>
+        <div *ngIf="imageUrl.invalid &&  imageUrl.touched" class="alert alert-danger">
+            Url is Required.
+        </div>
     </div>
 
     <button class="btn btn-primary"> Save </button>
