--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<table>
+<!-- <table>
     <thead>
       <th>id</th>
       <th>Title</th>
@@ -17,4 +17,4 @@
         </td>
       </tr>
     </tbody>
-  </table>
+  </table> -->
