--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,44 +1,65 @@
-<form [formGroup]="productForm" class="mt-3" (ngSubmit)="save(productForm.value)" >
-    <div class="form-group">
-        <label for="title" class="for">Title</label>
-        <input id="title" type="text" class="form-control" formControlName='title'>
-
-        <div *ngIf="title.invalid &&  title.touched" class="alert alert-danger">
-         Title is Required!
-        </div>
+    <div class="row">
+         <div class="col-sm-6">
+        <form [formGroup]="productForm" class="mt-3" (ngSubmit)="save(productForm.value)" >
+            <div class="form-group">
+                <label for="title" class="for">Title</label>
+                <input id="title" type="text" class="form-control" formControlName='title'>
+        
+                <div *ngIf="title.invalid &&  title.touched" class="alert alert-danger">
+                 Title is Required!
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="price" class="for">Price</label>
+                <div class="input-group-prepend">
+                    <span class="input-group-text">$</span>
+                    <input id="price" type="number" class="form-control" formControlName='price'>
+                </div>
+                <div *ngIf="price.invalid &&  price.touched" class="alert alert-danger">
+                    <div *ngIf="price.errors.required" >Price is Required!</div>
+                    <div *ngIf="price.errors?.min" >Price should be 0 or higher!</div>
+                </div>
+              </div>
+           
+            <div class="form-group">
+                <label for="category" >Category</label>
+                <select id="category" class="form-control" formControlName='category'>
+                    <option value="choose category" class='disabled' ></option>
+                    <option *ngFor='let category of categories$ | async' [value]="category.key">
+                        {{ category.name }}
+                    </option>
+                </select>
+                <div *ngIf="category.invalid &&  category.touched" class="alert alert-danger">
+                    Category is Required!
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="imageUrl" class="for">ImageUrl</label>
+                <input id="imageUrl" type="text" class="form-control" formControlName='imageUrl'>
+                <div *ngIf="imageUrl.invalid &&  imageUrl.touched" class="alert alert-danger">
+                    <div *ngIf="imageUrl.errors.required" >url is Required!</div>
+                    <div *ngIf="imageUrl.errors?.url" >Invalid URL</div>
+                </div>
+            </div>
+        
+            <button class="btn btn-primary"> Save </button>
+        
+        </form>
     </div>
-    <div class="form-group">
-        <label for="price" class="for">Price</label>
-        <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-            <input id="price" type="number" class="form-control" formControlName='price'>
-        </div>
-        <div *ngIf="price.invalid &&  price.touched" class="alert alert-danger">
-            <div *ngIf="price.errors.required" class="alert alert-danger">Price is Required!</div>
-            <div *ngIf="price.errors.min" class="alert alert-danger">Price should be 0 or higher!</div>
-        </div>
-      </div>
-   
-    <div class="form-group">
-        <label for="category" >Category</label>
-        <select id="category" class="form-control" formControlName='category'>
-            <option value="choose category" class='disabled' ></option>
-            <option *ngFor='let category of categories$ | async' [value]="category.key">
-                {{ category.name }}
-            </option>
-        </select>
-        <div *ngIf="category.invalid &&  category.touched" class="alert alert-danger">
-            Category is Required!
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="imageUrl" class="for">ImageUrl</label>
-        <input id="imageUrl" type="text" class="form-control" formControlName='imageUrl'>
-        <div *ngIf="imageUrl.invalid &&  imageUrl.touched" class="alert alert-danger">
-            Url is Required.
-        </div>
+
+
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" [src]='imageUrl.value'>
+            <div class="card-body">
+              <h5 class="card-title">{{ title.value }}</h5>
+              <p class="card-text">{{ price.value | currency:'R$':true }}</p>
+            </div>
+          </div>
     </div>
 
-    <button class="btn btn-primary"> Save </button>
+</div>
 
-</form>
+
+
+
