--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,7 +1,48 @@
 
 <a routerLink='/admin/products/new' class="btn btn-primary mt-5 mb-3">
     New Product</a>
+    
+    <p>
+    <input 
+    [formControl]="query"
+    (keyup)="applyFilter($event.target.value)" placeholder="Search..."
+    type="text" class="form-control"></p>
 
+    
+
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header > Title </th>
+            <td mat-cell *matCellDef="let product"> {{product.title}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header > Price </th>
+            <td mat-cell *matCellDef="let product"> {{product.price | currency :'R$'}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef > Category </th>
+            <td mat-cell *matCellDef="let product"> {{product.category}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef> Edit </th>
+            <td mat-cell *matCellDef="let product"> 
+                <a [routerLink]="['/admin/products/',product.key]"> Edit </a>   
+            </td>
+          </ng-container>
+
+        
+          <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+          <tr mat-row *matRowDef="let myRowData; columns: tableColumns"></tr>
+        ...
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 15]" ></mat-paginator>
+
+<!--    
     <table class="table">
 
         <thead>
@@ -13,7 +54,7 @@
         </thead>
 
         <tbody>
-            <tr *ngFor='let product of products$ '>
+            <tr *ngFor='let product of filteredProducts '>
                 <td>{{ product.title }}</td>
                 <td>{{ product.price }}</td>
                 <td>
@@ -22,4 +63,4 @@
             </tr>
         </tbody>
 
-    </table>
+    </table>  -->
