--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,6 +1,6 @@
     <div class="row">
          <div class="col-sm-6">
-        <form [formGroup]="productForm" class="mt-3" (ngSubmit)="save(productForm.value)" >
+        <form [formGroup]="productForm" class="mt-4" (ngSubmit)="save(productForm.value)" >
             <div class="form-group">
                 <label for="title" class="for">Title</label>
                 <input id="title" type="text" class="form-control" formControlName='title'>
@@ -42,18 +42,18 @@
                 </div>
             </div>
         
-            <button class="btn btn-primary"> Save </button>
-        
+            <button class="btn btn-primary mr-2"> Save </button>
+            <button (click)="delete()" class="btn btn-danger"> Delete </button> 
         </form>
     </div>
 
 
     <div class="col-sm-6">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" [src]='imageUrl.value'>
+        <div *ngIf="title.value" class="card mt-5 ml-5" style="width: 18rem;">
+             <img class="card-img-top" [src]='imageUrl.value' *ngIf="imageUrl.value"> 
             <div class="card-body">
               <h5 class="card-title">{{ title.value }}</h5>
-              <p class="card-text">{{ price.value | currency:'R$':true }}</p>
+              <p class="card-text">{{ price.value | currency:'R$'}}</p>
             </div>
           </div>
     </div>
