--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <app-bs-navbar></app-bs-navbar>
 
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+
+<body>
+
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+    
+</body>
 
 
