--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -49,13 +49,7 @@
 
 
     <div class="col-sm-6">
-        <div *ngIf="title.value" class="card mt-5 ml-5" style="width: 18rem;">
-             <img class="card-img-top" [src]='imageUrl.value' *ngIf="imageUrl.value"> 
-            <div class="card-body">
-              <h5 class="card-title">{{ title.value }}</h5>
-              <p class="card-text">{{ price.value | currency:'R$'}}</p>
-            </div>
-          </div>
+        <app-product-card [product]="produto" [show-actions]="false"> </app-product-card>
     </div>
 
 </div>
