--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,1 @@
-
-<div class="row">
-    <ng-container *ngFor="let product of products$; let i = index">
-        <div class="col">
-
-            <div class="card" style="width: 15rem;">
-                <img class="card-img-top" src="{{ product.imageUrl }}" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{ product.title }}</h5>
-                  <p class="card-text"> {{ product.price | currency : 'R$'}}</p>
-                  <a href="#" class="btn btn-primary"> Add to cart</a>
-                </div>
-              </div>
-
-        </div>
-        <div *ngIf="(i + 1) % 2 == 0" class="w-100"></div>
-
-    </ng-container>
-</div>
+<p>Home!</p>
