--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,29 @@
-<p>products works!</p>
+
+<div class="row">
+
+    <div class="col-3">
+      
+       <app-product-filter [category] ="category"></app-product-filter>
+    
+    </div>
+    
+    <div class="col-9">
+    
+        <div class="row" *ngIf="cart$ | async as cart">
+            <ng-container *ngFor="let product of filteredProducts; let i = index">
+                <div class="col">
+        
+                       <app-product-card [product]="product" [shopping-cart]="cart" ></app-product-card>
+        
+                </div>
+                <div *ngIf="(i + 1) % 2 == 0" class="w-100"></div>
+        
+            </ng-container>
+        </div>
+        
+    </div>
+    
+    </div>
+    
+    
+    
