ajustes finais - cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-bs-navbar></app-bs-navbar>
 
 
-<body>
+<body style="padding-top: 30px;">
 
     <div class="container">
         <router-outlet></router-outlet>
