--- a/src/app/shopping/components/products/products.component.html
+++ b/src/app/shopping/components/products/products.component.html
@@ -12,9 +12,9 @@
         <div class="row" *ngIf="cart$ | async as cart">
             <ng-container *ngFor="let product of filteredProducts; let i = index">
                 <div class="col">
-        
-                       <app-product-card [product]="product" [shopping-cart]="cart" ></app-product-card>
-        
+                    <div style="max-width: 20rem;">
+                       <app-product-card  [product]="product" [shopping-cart]="cart" ></app-product-card>
+                    </div>
                 </div>
                 <div *ngIf="(i + 1) % 2 == 0" class="w-100"></div>
         
